RPS-658 Resizing the EU country dropdown to prevent text wrapping

--- a/org_rapala_redesign/cartridge/scss/default/pages/_change-region.scss
+++ b/org_rapala_redesign/cartridge/scss/default/pages/_change-region.scss
@@ -243,6 +243,7 @@
 .change-region-dropdown {
     float: left;
     .rapala-middle-block{
+        width: 200px;
         z-index: 1000;
         .top_arrow {
             left: 3px;
